<resources>
    <string name="empty_value" />
    <string name="app_name">Ohh Ferta</string>
    <string name="credendials">427145770230-q9c5r64bf65trgqlt9mbkdd010ecehda.apps.googleusercontent.com</string>

    <string name="pattern_save_images">images</string>
    <string name="pattern_date_images">ddMMyyhhmmss</string>

    <!-- SPLASH -->
    <string name="splash_icon_description">Ícone da aplicação, um megafone.</string>

    <!-- EXIT -->
    <string name="exit_snackbar">Sair</string>
    <string name="exit_title_no_button">Não</string>
    <string name="exit_title_yes_button">Sim</string>
    <string name="exit_description">Até mais…</string>
    <string name="exit_title">Deseja sair do App?  &#128542;</string>
    <string name="exit_description_logout">Quando voltar pricisaremos que entre com seu e-mail e senha.</string>

    <!-- SIGN IN, SIGN UP, RECOVER and RESET -->
    <string name="valid_password">Senha válida.</string>
    <string name="valid_email">E-mail %s válido.</string>
    <string name="title_email_text_input">E-mail</string>
    <string name="title_password_text_input">Senha</string>
    <string name="title_create_account">Criar conta</string>
    <string name="title_create_account_button">Criar</string>
    <string name="failure_name_message">Nome inválido.</string>
    <string name="failure_email_message">E-mail inválido.</string>
    <string name="failure_password_message">Senha inválida.</string>
    <string name="placeholder_email_text_input">Seu melhor e-mail</string>
    <string name="placeholder_password_text_input">Uma senha segura</string>

    <!-- SIGN UP -->
    <string name="sign_up_success_message">Bem vindo.  &#128151;</string>

    <!-- SIGN IN -->
    <string name="sign_in_title">Bem vindo!</string>
    <string name="sign_in_title_button">Entrar</string>
    <string name="sign_in_title_check_box">Lembrar de mim</string>
    <string name="sign_in_title_recover_password_button">Recuperar conta?</string>
    <string name="sign_in_description_create_account">Não possui uma conta?</string>
    <string name="sign_in_sub_title">Olá.\nAcesse sua conta e divulge seus produtos</string>

    <string name="sign_up_sub_title">Entre com seu e-mail e senha.</string>
    <string name="sign_up_title_already_existing_account_button">Entrar</string>
    <string name="sign_up_generic_error">Verifique seus dados e tente novamente.</string>
    <string name="sign_up_success_create_account">Sua conta foi criada com sucesso.</string>
    <string name="sign_up_description_already_existing_account">Já possui uma conta?</string>

    <!-- RECOVER PASSWORD -->
    <string name="recover_title">Recuperar conta</string>
    <string name="recover_send_recover_button">Enviar</string>
    <string name="recover_open_email_title_button">Verificar</string>
    <string name="recover_success_title">Verifique seu e-mail.</string>
    <string name="recover_placeholder_email_text_input">E-mail da sua conta</string>
    <string name="recover_description">Vamos lhe enviar um e-mail para trocar sua senha.</string>

    <!-- RESET PASSWORD -->
    <string name="reset_title_button">Enviar</string>
    <string name="reset_password_title">Vamos recuperar sua conta</string>
    <string name="reset_success_title">Senha alterada com sucesso  &#127881;</string>
    <string name="reset_password_sub_title">Entre com uma nova senha para que possa ter acesso a sua conta.</string>

    <!-- PERMISSIONS -->
    <string name="permissions_signal">∗</string>
    <string name="permissions_title">Permissões</string>
    <string name="permissions_title_accept_button">Sim</string>
    <string name="permissions_title_no_accept_button">Não</string>
    <string name="permissions_success">Obrigado por fornecer as permissões.</string>
    <string name="permissions_failure">As permissões não foram concedidas.  &#128542;</string>
    <string name="permissions_subtitle">Permissões necessárias para aproveitar ao máximo nosso aplicativo.</string>
    <string-array name="permissions_request">
        <item>Permita que o aplicativo adiciona fotos dos seus produtos para dar aquele UP nas suas ofertas;</item>
        <item>Permita que o aplicativo receba notificações para que possamos lhe avisar sobre novidades quentinhas.</item>
    </string-array>

    <!-- HOME -->
    <string name="home_fab_title_button">Cadastrar</string>

    <!-- OFFER -->
    <string name="offer_title">Cadastrar oferta</string>
    <string name="offer_title_save_button">Criar</string>
    <string name="offer_title_name_text_input">Nome</string>
    <string name="offer_placeholder_name_text_input">Café</string>
    <string name="offer_title_name_text_input_text_input">Nome</string>
    <string name="offer_subtitle">Cadastre um novo produto que deseja criar uma oferta!</string>

    <!-- GALLERY -->
    <string name="gallery_title_save_button">Selecionar</string>
    <string name="gallery_title">Selecione as imagens  &#127919;</string>
    <string name="gallery_selected_title_save_button">%s foto selecionada</string>
    <string name="gallery_max_selected_message">Selecione apenas 5 fotos</string>
    <string name="gallery_permissions_message">Conceda as permissões para continuar.</string>
    <string name="gallery_multiple_selected_title_save_button">%s fotos selecionadas</string>
    <string name="gallery_subtitle">Selecione até 5 imagens do produto que deseja criar uma nova oferta!</string>

    <!-- NOTIFICATION -->
    <string name="notification_title">Notificações</string>

    <!-- SETTINGS -->
    <string name="setting_title">Configurações</string>
    <string name="setting_logout_title_button">Sair</string>
    <string name="setting_logout_title_failure">Não foi possível deslogar da sua conta.</string>

    <!-- TOOLBAR -->
    <string name="toolbar_title">Olá,</string>
    <string name="toolbar_sub_title">seja bem vindo</string>
    <string name="home_toolbar_icon_title">Notificações</string>
    <string name="products_toolbar_icon_title">Produtos</string>

    <!-- BOTTOM NAVIGATION -->
    <string name="title_home">Olá, Bed</string>
    <string name="bottom_home">Promoções</string>
    <string name="bottom_products">Produtos</string>
    <string name="title_products">Seus produtos</string>

    <!-- DIALOG -->
    <string name="dialog_connection_subtitle">Reconectando…</string>
    <string name="dialog_connection_title">Opps, não há conexão</string>
    <string name="dialog_connection_button_title">Verificar a conexão</string>

    <!-- BUTTON -->
    <string name="title_cancel_button">Cancelar</string>

    <!-- GENERIC FAILURE -->
    <string name="generic_email_failure_form">Ops! Preencha um e-mail válido.</string>
    <string name="generic_password_failure_form">Ops! Preencha uma senha válida.</string>
    <string name="generic_failure_title">Ops! Parece que algo deu errado.  &#128542;</string>
    <string name="generic_failures_form">Ops! Por favor, verifique os campos e tente novamente.</string>
</resources>