<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:padding="@dimen/normal_padding"
    android:orientation="vertical"
    style="@style/BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.dashboard.permission.PermissionFragment"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >

    <TextView
        android:layout_weight="4"
        android:text="@string/permissions_title"
        android:layout_height="0dp"
        style="@style/SemiBoldHeading5"
        android:layout_width="wrap_content" />

    <TextView
        style="@style/GreyMediumNormalBody"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_subtitle" />

    <com.airbnb.lottie.LottieAnimationView
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_width="@dimen/permission_icon_size"
        android:layout_height="@dimen/permission_icon_size"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/megaphone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/permission_recycler"
        tools:itemCount="6"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_permission_component"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <Button
        android:id="@+id/permission_accept_button"
        android:text="@string/permissions_title_accept_button"
        style="@style/NormalButton"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/permission_no_accept_button"
        android:text="@string/exit_title_no_button"
        style="@style/CancelButton"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_width="match_parent" />

</LinearLayout>