<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:paddingTop="@dimen/normal_space"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.dashboard.offers.OfferFragment" >

    <TextView
        style="@style/GreyMediumNormalBody"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/small_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_space"
        android:text="@string/offer_subtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_recycler"
        tools:itemCount="6"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/normal_space"
        android:paddingHorizontal="@dimen/normal_space"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_gallery_component"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:text="@string/offer_title_name_text_input"
        style="@style/MediumBody1"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/normal_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_space" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        style="@style/TextInput"
        app:placeholderText="@string/offer_placeholder_name_text_input"
        app:endIconMode="clear_text"
        android:layout_marginTop="@dimen/extra_small_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_space" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_input"
            tools:text="@string/offer_placeholder_name_text_input"
            android:lines="@integer/max_lines_commons"
            android:maxLines="@integer/max_lines_commons"
            android:maxLength="@integer/max_length_email"
            style="@style/TextInputEdit"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:text="@string/offer_title_save_button"
        style="@style/NormalButton"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/normal_space"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/normal_space" />

    <Button
        android:id="@+id/cancel_button"
        android:text="@string/title_cancel_button"
        style="@style/CancelButton"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/small_space"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/normal_space" />

</LinearLayout>