<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="@dimen/normal_space"
    style="@style/BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.dashboard.gallery.GalleryFragment"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >

    <TextView
        android:id="@+id/title_text"
        android:layout_gravity="start"
        style="@style/SemiBoldHeading5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_title"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_gravity="start"
        style="@style/GreyMediumNormalBody"
        android:layout_marginTop="@dimen/small_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        android:text="@string/gallery_subtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_recycler"
        app:spanCount="3"
        tools:itemCount="9"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_space"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.64"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_gallery_component"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

    <LinearLayout
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/images_recycler" >

        <Button
            android:id="@+id/select_button"
            android:text="@string/gallery_title_save_button"
            style="@style/NormalButton"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/normal_space"
            android:layout_width="match_parent" />

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/title_cancel_button"
            style="@style/CancelButton"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/small_space"
            android:layout_width="match_parent" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>