<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.authentication.reset.ResetFragment" >

    <ScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:padding="@dimen/normal_space"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/reset_password_title"
                style="@style/MediumHeading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/RegularBody2"
                android:layout_marginTop="@dimen/small_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_sub_title" />

            <TextView
                android:text="@string/title_password_text_input"
                style="@style/MediumBody1"
                android:layout_marginTop="@dimen/normal_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/TextInput"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/placeholder_password_text_input" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_input"
                    android:lines="@integer/max_lines_commons"
                    android:maxLines="@integer/max_lines_commons"
                    android:maxLength="@integer/max_length_password"
                    style="@style/TextInputEdit"
                    tools:text="@string/placeholder_password_text_input"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/reset_repeat_our_password_text_input"
                style="@style/MediumBody1"
                android:layout_marginTop="@dimen/normal_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeat_password_text_input"
                style="@style/TextInput"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/reset_repeat_our_password_text_input" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password_edit_input"
                    android:lines="@integer/max_lines_commons"
                    android:maxLines="@integer/max_lines_commons"
                    android:maxLength="@integer/max_length_password"
                    style="@style/TextInputEdit"
                    tools:text="@string/reset_repeat_our_password_text_input"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ViewFlipper
                android:id="@+id/action_flipper"
                android:layout_marginTop="@dimen/normal_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/reset_button"
                    android:text="@string/reset_title_button"
                    style="@style/CancelButton"
                    android:layout_height="@dimen/button_height"
                    android:layout_width="match_parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress"
                    android:layout_width="@dimen/progress_bar_dimens"
                    android:layout_height="@dimen/progress_bar_dimens"
                    android:indeterminate="true"
                    android:layout_gravity="center" />

            </ViewFlipper>

        </LinearLayout>

    </ScrollView>

</LinearLayout>