<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/normal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <TextView
                android:id="@+id/sign_up_title"
                android:text="@string/title_create_account"
                style="@style/MediumHeading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/sign_up_sub_title"
                style="@style/GreyRegularBody2"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/sign_up_sub_title"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />

            <TextView
                android:id="@+id/sign_up_name_text_view"
                android:text="@string/sign_up_title_name_text_input"
                style="@style/MediumBody1"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_sub_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_name_text_input"
                android:layout_width="0dp"
                app:endIconMode="clear_text"
                android:layout_height="wrap_content"

                app:placeholderText="@string/sign_up_placeholder_name_text_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/OutlinedRoundBoxTextInputLayout"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/sign_up_name_text_view" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_name_edit_input"
                    android:lines="@integer/max_lines_commons"
                    android:maxLines="@integer/max_lines_commons"
                    android:maxLength="@integer/max_length_name"
                    tools:text="@string/sign_up_placeholder_name_text_input"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/OutlinedRoundBoxTextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sign_up_email_text_view"
                android:text="@string/title_email_text_input"
                style="@style/MediumBody1"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_name_text_input" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_email_text_input"
                android:layout_width="0dp"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/big_small_margin"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/OutlinedRoundBoxTextInputLayout"
                app:placeholderText="@string/placeholder_email_text_input"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_email_text_view" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_email_edit_input"
                    android:lines="@integer/max_lines_commons"
                    android:maxLines="@integer/max_lines_commons"
                    android:maxLength="@integer/max_length_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:text="@string/placeholder_email_text_input"
                    style="@style/OutlinedRoundBoxTextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sign_up_password_text_view"
                android:text="@string/title_password_text_input"
                style="@style/MediumBody1"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_email_text_input" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_password_text_input"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/big_small_margin"
                app:endIconMode="password_toggle"
                app:placeholderText="@string/placeholder_password_text_input"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/OutlinedRoundBoxTextInputLayout"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/sign_up_password_text_view" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_password_edit_input"
                    tools:text="@string/placeholder_password_text_input"
                    android:lines="@integer/max_lines_commons"
                    android:maxLines="@integer/max_lines_commons"
                    android:maxLength="@integer/max_length_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/OutlinedRoundBoxTextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <ViewFlipper
                android:id="@+id/sign_up_action_view_flipper"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/sign_up_password_text_input" >

                <Button
                    android:id="@+id/sign_up_button"
                    android:text="@string/title_create_account"
                    android:enabled="false"
                    android:layout_height="@dimen/button_height"
                    style="@style/UnelevatedButton"
                    android:layout_width="match_parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/sign_up_progress"
                    android:layout_width="@dimen/progress_bar_dimens"
                    android:layout_height="@dimen/progress_bar_dimens"
                    android:indeterminate="true"
                    android:layout_gravity="center" />

            </ViewFlipper>

            <LinearLayout
                android:layout_marginTop="@dimen/normal_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_action_view_flipper" >

                <TextView
                    style="@style/GreyRegularBody2"
                    android:text="@string/sign_up_description_already_existing_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/sign_up_already_existing_account_button"
                    android:layout_marginStart="@dimen/big_small_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/LightGreenRegularBody2"
                    android:text="@string/sign_up_title_already_existing_account_button" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>